# crm

./: .env  Cargo.toml  README.md  cliff.toml  deny.toml  test.txt
.github/workflows/: build.yml
crm/: Cargo.toml  build.rs  crm.yml
crm-metadata/: Cargo.toml  build.rs  metadata.yml
crm-metadata/src/: config.rs  lib.rs  main.rs
crm-metadata/src/abi/: mod.rs
crm-metadata/src/pb/: metadata.rs
crm-metadata/tests/: service.rs
crm-send/: Cargo.toml  build.rs  send.yml
crm-send/src/: config.rs  lib.rs  main.rs
crm-send/src/abi/: email.rs  inapp.rs  mod.rs  sms.rs
crm-send/src/pb/: send.rs  user_stats.rs
crm-send/tests/: service.rs
crm/src/: client.rs  config.rs  lib.rs  server.rs
crm/src/abi/: crm.rs  mod.rs
crm/src/pb/: crm.rs  mod.rs
protos/: crm.proto
protos/crm/: messages.proto  rpc.proto
protos/metadata/: messages.proto  rpc.proto
protos/send/: messages.proto  rpc.proto
protos/user_stats/: messages.proto  rpc.proto
user-stat/: Cargo.toml  build.rs  user_stat.yml
user-stat/examples/: gen.rs
user-stat/src/: config.rs  lib.rs  main.rs
user-stat/src/abi/: mod.rs
user-stat/src/pb/: user_stats.rs
user-stat/tests/: service.rs
