[workspace]
members = ["crm", "user-stat"]
resolver = "2"



[workspace.dependencies]
anyhow = "1.0.89"
prost = { version = "0.12.4"}
prost-build = { version = "0.12.4"}
prost-types = { version = "0.12.4"}
tonic = { version = "0.11.0", features = ["zstd", "tls"] }
tonic-build = "0.11.0"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "macros", "postgres", "chrono"] }
serde = { version = "1.0.130", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
