[workspace]
members = ["crm", "user-stat"]
resolver = "2"



[workspace.dependencies]
anyhow = "1.0.89"
prost = { version = "0.13.3"}
prost-build = { version = "0.13.3"}
prost-types = { version = "0.13.3"}
tonic = { version = "0.12.3", features = ["zstd", "tls"] }
tonic-build = "0.12.3"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "macros", "postgres", "chrono"] }
serde = { version = "1.0.130", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
tokio-stream = { version="0.1.0" }
serde_yaml = "0.9.33"
itertools = "0.13.0"
user-stat = { path = "user-stat" }
tracing = { version = "0.1.26" }
tracing-subscriber = { version = "0.3.18" }
