[package]
name = "crm-metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
build = "0.0.2"
chrono = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = {workspace = true}
tonic = { workspace = true }
sqlx ={ workspace = true }
serde = { workspace = true }
rand = "0.8.5"
tokio-stream = { workspace = true }
derive_builder = "0.20.2"
serde_yaml = { workspace = true }
itertools = { workspace = true }
sqlx-db-tester = { version = "0.4.2", optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
fake = {version = "2.9.2", features = ["chrono","derive","url"]}

[build-dependencies]
# prost-build = { workspace = true }
anyhow = { workspace = true }
tonic-build = {workspace = true}
proto-builder-trait = "0.6.1"
