[package]
name = "crm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
anyhow = { workspace = true }
build = "0.0.2"
chrono = { version = "0.4.38", features = ["serde"] }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = {workspace = true}
tonic = { workspace = true }


[build-dependencies]
prost-build = { workspace = true }
anyhow = { workspace = true }
tonic-build = {workspace = true}
