[package]
name = "user-stat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
build = "0.0.2"
chrono = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = {workspace = true}
tonic = { workspace = true }
sqlx ={ workspace = true }
serde = { workspace = true }
rand = "0.8.5"

[build-dependencies]
prost-build = { workspace = true }
anyhow = { workspace = true }
tonic-build = {workspace = true}

[dev-dependencies]
fake = {version = "2.9.2", features = ["chrono","derive"]}
nanoid = "0.4.0"
